# marimo-flow

./: .marimo.toml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-code.yml  docker-publish.yml  marimo-pages.yml  python-publish.yml
docker/: Dockerfile.xpu
docs/: agents.md  roadmap.md
examples/: 02_provenance_dashboard.py  04_mpc_heat_rod.py  lab.py
src/marimo_flow/: cli.py
src/marimo_flow/agents/: __init__.py  graph.py  lead.py  mcp.py  runner.py
src/marimo_flow/agents/schemas/: __init__.py  control.py  equation.py  problem.py
src/marimo_flow/agents/server/: a2a.py  ag_ui.py
src/marimo_flow/agents/services/: composer.py  mesh_domain.py
src/marimo_flow/agents/toolsets/: control.py  lead.py  training.py
src/marimo_flow/control/: __init__.py  heat_rod.py  mpc.py  pinn_surrogate.py
src/marimo_flow/core/: model_factory.py  model_manager.py  problem_manager.py  solver_manager.py  training.py
tests/agents/: test_composer.py  test_demos_compose.py  test_deps.py  test_e2e.py  test_graph.py  test_heat_rod.py  test_lead_layout.py  test_mcp.py  test_pinn_surrogate.py  test_runner.py  test_servers.py
